# solarVerification

./: .gitignore  README.md  abs_benchmark.csv  benchmark.ipynb  c.csv  dataManager.py  example_usage.py  hub.ipynb  imagen.py  imagenRunner.py  inference.py  package-lock.json  package.json  qc_training_data.json  rel_benchmark.csv  requirements.txt  run_model.py  tsconfig.json  tsconfig.tsbuildinfo
detections/: detection_1763702369545.json  detection_1763702382164.json  detection_1763702423535.json  detection_1763702438411_export.json  detection_1763702493728.json  detection_1763702504533.json  detection_1763702515831.json  detection_1763702605237.json  detection_1763702615997.json  detection_1763702888047.json  detection_1763702910550.json  detection_1763702939801.json  detection_1763703001776.json  detection_1763703010215.json  detection_1763703150226.json  detection_1763703163039.json  detection_1763703171336.json  detection_1763703186937.json  detection_1763703204486.json  detection_1763703214024.json  detection_1763718218051.json  detection_1763718295722.json  detection_1763718313797.json  detection_1763718335011.json
examples/Imagen/: testImagen.py
gui/: index.html  inference.py  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src-tauri/: tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/components/: LoadingSpinner.tsx  (+3 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: BatchProcessor.tsx  LoadingSpinner.css  MapCanvas.tsx  MapPicker.tsx  ResultsView.tsx  Sidebar.tsx
