[package]
name = "helioscope"
version = "1.0.0"
description = "AI-Powered Solar Panel Detection"
authors = ["Wing-It Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
csv = "1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
